tests/kiama/negative/name_errors/L2/9_casename2.ob
MODULE casename;

VAR
    bvar : INTEGER;

BEGIN
    CASE bvar OF
        1 : bvar := 2
      | 3 : avar := 4
    END
END casename.
